# enji-guard-cli

./: .dockerignore  .env.example  .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Justfile  README.md  ROADMAP.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  container.yml  dependency-review.yml  release.yml  vulnerability-scan.yml
.planning/: .continue-here.md  HANDOFF.json
contracts/: enji-openapi.json
deploy/: docker-compose.ghcr.yml
docs/: cli-surface-design.md  decisions.md  deployment.md  enji-api-field-guide.md  enji-cli-mcp-spec.md  enji-guard-api.md  expert-review-backlog.md
docs/plans/: audit-bounded-contexts-refactor.md  auth-session-resilience.md
scripts/: __init__.py  classify_changed_files.py  crap_gate.py  release_contract.py  release_smoke.py  release_smoke_mutations.py  release_smoke_soak.py  release_status.py  release_version.py  validate_openapi_contract.py  validate_pr_title.py
src/enji_guard_cli/: __init__.py  _build_provenance.py  _enji_api_contract.py  application.py  atomic_json.py  audits.py  auth.py  cli.py  composition.py  core.py  enji_api.py  errors.py  fanout.py  journey.py  json_types.py  mcp_facade.py  mcp_server.py  readiness.py  runtime.py  settings.py  telemetry.py  telemetry_sink.py  transport.py  transport_types.py  version.py
src/enji_guard_cli/audit/: __init__.py  artifacts.py  autofixes.py  catalog.py  catalog_observation.py  email.py  errors.py  freshness.py  ledger.py  lifecycle.py  models.py  observation.py  ports.py  preflight.py  runs.py  schedules.py  start.py  status.py  tasks.py  wait.py  workflows.py
src/enji_guard_cli/auth_impl/: __init__.py  auto_refresh.py  cookies.py  payloads.py  store.py
src/enji_guard_cli/auth_session/: __init__.py  adapters.py  api.py  auto_refresh.py  cookies.py  coordinator.py  credential_changes.py  models.py  payloads.py  ports.py  projection.py  rotation.py  service.py  state_machine.py  store.py
src/enji_guard_cli/cli_impl/: __init__.py  audit_aliases.py  audit_commands.py  auth_catalog.py  autofix_commands.py  durations.py  rendering.py  rendering_support.py  report_commands.py  report_rendering.py  runtime_controls.py  write_preferences_commands.py  write_targets.py
src/enji_guard_cli/core_impl/: __init__.py  active_run_ledger.py  audit_runs.py  audit_tasks.py  autofixes.py  catalog.py  email_preferences.py  models.py  operations.py  payloads.py  preflight.py  project_admin.py  repo_status.py  report_language.py  report_reads.py  report_wait.py  report_workflows.py  schedules.py  selectors.py  status_views.py  targets.py  write_settings.py
src/enji_guard_cli/delivery/: __init__.py
src/enji_guard_cli/delivery/cli/: __init__.py  app.py  audit_presenter.py  presentation.py  presenters.py
src/enji_guard_cli/delivery/mcp/: __init__.py  server.py
src/enji_guard_cli/enji_api_impl/: __init__.py  audit_catalog_snapshot.py  client.py
src/enji_guard_cli/enji_gateway/: __init__.py  audit_gateway.py  client.py  contract.py  gitlab_gateway.py  http.py  pooled_client.py  portfolio_gateway.py  ports.py  wire.py
src/enji_guard_cli/gitlab/: __init__.py  models.py  ports.py
src/enji_guard_cli/portfolio/: __init__.py  errors.py  models.py  ports.py  projects.py  recon.py  repositories.py  scopes.py  selectors.py  status.py
src/enji_guard_cli/runtime_observability/: __init__.py  auth_coordinator.py  journey.py  ports.py  readiness.py  runtime.py  supervisor.py  telemetry.py  telemetry_sink.py
tests/: conftest.py  test_application_audit_status.py  test_application_catalog_once.py  test_application_schedule_auto_time.py  test_application_scope_idempotency.py  test_application_settings.py  test_atomic_json.py  test_audit_artifacts.py  test_audit_autofixes_complexity.py  test_audit_catalog_snapshot.py  test_audit_email.py  test_audit_freshness.py  test_audit_ledger.py  test_audit_lifecycle.py  test_audit_observation.py  test_audit_runs.py  test_audit_schedules.py  test_audit_status.py  test_audit_wait.py  test_audit_workflows_complexity.py  test_auth.py  test_auth_process_acceptance.py  test_auth_session_resilience.py  test_auth_state_machine.py  test_auth_storage_projection.py  test_autofixes.py  test_catalog.py  test_classify_changed_files.py  test_cli.py  test_cli_surface_contract.py  test_core.py  test_crap_autofix_schedule_behavior.py  test_crap_behavior_coverage.py  test_credential_changes.py  test_delivery_catalog_observation.py  test_delivery_cli.py  test_delivery_cli_contracts.py  test_enji_api.py  test_enji_gateway.py  test_fanout.py  (+31 more)
