[project]
name = "enji-guard-cli"
dynamic = ["version"]
description = "Command-line tools for Enji Guard."
license = "PolyForm-Noncommercial-1.0.0"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1,<1",
    "httpx-retries>=0.6.0,<1",
    "mcp[cli]>=1.28.1,<2",
    "typer>=0.26.7",
]

[project.scripts]
enji-guard = "enji_guard_cli.cli:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/enji_guard_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-config --strict-markers -W error"
tmp_path_retention_policy = "failed"
tmp_path_retention_count = 1
xfail_strict = true

[tool.ruff]
src = ["src", "scripts", "tests"]
line-length = 120
target-version = "py314"
extend-exclude = [".planning"]

[tool.ruff.lint]
explicit-preview-rules = true
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "B",
    "BLE",
    "UP",
    "C4",
    "PIE",
    "RET",
    "ISC",
    "RSE",
    "FLY",
    "FURB",
    "RUF",
    "PERF",
    "SIM",
    "PTH",
    "DTZ",
    "PGH",
    "PLE",
    "LOG",
    "G",
    "N818",
    "ARG",
    "S",
    "C90",
    "PLR09",
    "PLR17",
    "PLR2004",
]
ignore = ["ISC001", "S101", "S105"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "DTZ",
    "ARG",
    "PERF401",
    "PLR2004",
    "S",
]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src/enji_guard_cli", "scripts", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "standard"
reportAny = "error"
reportExplicitAny = "error"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
reportMissingParameterType = "error"
reportMissingTypeArgument = "none"
reportUnannotatedClassAttribute = "none"
reportUnusedCallResult = "none"
reportImplicitStringConcatenation = "none"
reportPrivateUsage = "none"

[tool.vulture]
paths = ["src/enji_guard_cli", "scripts", "tests"]
min_confidence = 80
ignore_decorators = [
    "@app.callback",
    "@app.command",
]

[tool.deptry]
known_first_party = ["enji_guard_cli"]
per_rule_ignores = { DEP004 = ["radon"] }

[tool.coverage.run]
source = ["src/enji_guard_cli"]
branch = true
sigterm = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.importlinter]
root_package = "enji_guard_cli"
include_external_packages = true

[[tool.importlinter.contracts]]
id = "core-independent-from-entrypoints"
name = "Core stays independent from CLI and MCP entrypoints"
type = "forbidden"
source_modules = ["enji_guard_cli.core", "enji_guard_cli.core_impl"]
forbidden_modules = [
    "enji_guard_cli.cli",
    "enji_guard_cli.cli_impl",
    "enji_guard_cli.journey",
    "enji_guard_cli.mcp_facade",
    "enji_guard_cli.runtime",
    "enji_guard_cli.mcp_server",
]

[[tool.importlinter.contracts]]
id = "adapter-and-infrastructure-independent-from-core-and-entrypoints"
name = "API adapter and infrastructure stay below core and entrypoints"
type = "forbidden"
source_modules = [
    "enji_guard_cli._enji_api_contract",
    "enji_guard_cli.auth",
    "enji_guard_cli.auth_impl",
    "enji_guard_cli.enji_api",
    "enji_guard_cli.enji_api_impl",
    "enji_guard_cli.errors",
    "enji_guard_cli.readiness",
    "enji_guard_cli.telemetry",
    "enji_guard_cli.telemetry_sink",
    "enji_guard_cli.transport",
]
forbidden_modules = [
    "enji_guard_cli.core",
    "enji_guard_cli.core_impl",
    "enji_guard_cli.cli",
    "enji_guard_cli.cli_impl",
    "enji_guard_cli.mcp_facade",
    "enji_guard_cli.runtime",
    "enji_guard_cli.mcp_server",
]

[[tool.importlinter.contracts]]
id = "package-dependency-direction"
name = "Package imports flow from entrypoints toward transport"
type = "layers"
layers = [
    "enji_guard_cli.cli",
    "enji_guard_cli.cli_impl",
    "enji_guard_cli.runtime",
    "enji_guard_cli.mcp_server",
    "enji_guard_cli.journey",
    "enji_guard_cli.mcp_facade",
    "enji_guard_cli.core",
    "enji_guard_cli.core_impl",
    "enji_guard_cli.audits",
    "enji_guard_cli.enji_api",
    "enji_guard_cli.enji_api_impl",
    "enji_guard_cli._enji_api_contract",
    "enji_guard_cli.auth",
    "enji_guard_cli.auth_impl",
    "enji_guard_cli.transport",
    "enji_guard_cli.telemetry",
    "enji_guard_cli.telemetry_sink",
    "enji_guard_cli.readiness",
    "enji_guard_cli.errors",
    "enji_guard_cli.json_types",
    "enji_guard_cli.settings",
]

[[tool.importlinter.contracts]]
id = "entrypoints-use-core-facade"
name = "CLI and MCP entrypoints use the core facade"
type = "forbidden"
source_modules = [
    "enji_guard_cli.cli",
    "enji_guard_cli.cli_impl",
    "enji_guard_cli.runtime",
    "enji_guard_cli.mcp_server",
    "enji_guard_cli.mcp_facade",
    "enji_guard_cli.journey",
]
forbidden_modules = ["enji_guard_cli.core_impl"]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
id = "mcp-server-uses-readonly-facade"
name = "MCP server uses the read-only facade, not broad core"
type = "forbidden"
source_modules = ["enji_guard_cli.mcp_server"]
forbidden_modules = ["enji_guard_cli.core", "enji_guard_cli.core_impl"]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
id = "entrypoints-avoid-api-transport-and-http-clients"
name = "CLI and MCP entrypoints avoid API adapter, transport internals, and HTTP clients"
type = "forbidden"
source_modules = [
    "enji_guard_cli.cli",
    "enji_guard_cli.cli_impl",
    "enji_guard_cli.journey",
    "enji_guard_cli.runtime",
    "enji_guard_cli.mcp_server",
    "enji_guard_cli.mcp_facade",
]
forbidden_modules = [
    "enji_guard_cli._enji_api_contract",
    "enji_guard_cli.enji_api",
    "enji_guard_cli.enji_api_impl",
    "enji_guard_cli.transport",
    "httpx",
    "httpx_retries",
]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
id = "core-avoids-transport-internals"
name = "Core uses Enji API adapter instead of transport internals"
type = "forbidden"
source_modules = ["enji_guard_cli.core", "enji_guard_cli.core_impl"]
forbidden_modules = ["enji_guard_cli.enji_api_impl", "enji_guard_cli.transport", "httpx", "httpx_retries"]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
id = "core-avoids-enji-api-contract-internals"
name = "Core uses Enji API behavior, not endpoint contract metadata"
type = "forbidden"
source_modules = ["enji_guard_cli.core", "enji_guard_cli.core_impl"]
forbidden_modules = ["enji_guard_cli._enji_api_contract"]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
id = "core-impl-avoids-enji-api"
name = "Core implementation helpers keep JSON typing out of the adapter"
type = "forbidden"
source_modules = [
    "enji_guard_cli.core_impl.models",
    "enji_guard_cli.core_impl.audit_runs",
    "enji_guard_cli.core_impl.audit_tasks",
    "enji_guard_cli.core_impl.email_preferences",
    "enji_guard_cli.core_impl.payloads",
    "enji_guard_cli.core_impl.project_admin",
    "enji_guard_cli.core_impl.repo_status",
    "enji_guard_cli.core_impl.report_wait",
    "enji_guard_cli.core_impl.report_reads",
    "enji_guard_cli.core_impl.schedules",
    "enji_guard_cli.core_impl.selectors",
    "enji_guard_cli.core_impl.status_views",
    "enji_guard_cli.core_impl.targets",
    "enji_guard_cli.core_impl.write_settings",
]
forbidden_modules = ["enji_guard_cli.enji_api", "enji_guard_cli.enji_api_impl"]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
id = "entrypoints-use-core-for-auth"
name = "CLI entrypoint uses core operations for auth"
type = "forbidden"
source_modules = ["enji_guard_cli.cli"]
forbidden_modules = ["enji_guard_cli.auth"]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
id = "audit-registry-stays-domain-pure"
name = "Audit registry stays pure domain metadata"
type = "forbidden"
source_modules = ["enji_guard_cli.audits"]
forbidden_modules = [
    "enji_guard_cli._enji_api_contract",
    "enji_guard_cli.auth",
    "enji_guard_cli.cli",
    "enji_guard_cli.cli_impl",
    "enji_guard_cli.core",
    "enji_guard_cli.core_impl",
    "enji_guard_cli.enji_api",
    "enji_guard_cli.enji_api_impl",
    "enji_guard_cli.errors",
    "enji_guard_cli.journey",
    "enji_guard_cli.mcp_facade",
    "enji_guard_cli.mcp_server",
    "enji_guard_cli.readiness",
    "enji_guard_cli.runtime",
    "enji_guard_cli.settings",
    "enji_guard_cli.telemetry",
    "enji_guard_cli.telemetry_sink",
    "enji_guard_cli.transport",
    "httpx",
    "httpx_retries",
    "mcp",
    "typer",
]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
id = "httpx-stays-behind-transport"
name = "HTTP client dependency stays behind transport"
type = "forbidden"
source_modules = [
    "enji_guard_cli.auth",
    "enji_guard_cli.auth_impl",
    "enji_guard_cli.cli",
    "enji_guard_cli.core",
    "enji_guard_cli.core_impl",
    "enji_guard_cli.enji_api",
    "enji_guard_cli.enji_api_impl",
    "enji_guard_cli.journey",
    "enji_guard_cli.mcp_facade",
    "enji_guard_cli.mcp_server",
    "enji_guard_cli.runtime",
    "enji_guard_cli.settings",
    "enji_guard_cli.telemetry",
    "enji_guard_cli.telemetry_sink",
]
forbidden_modules = ["httpx", "httpx_retries"]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
id = "frameworks-stay-in-entrypoints"
name = "Typer and MCP frameworks stay out of core, adapter, auth, and transport"
type = "forbidden"
source_modules = [
    "enji_guard_cli._enji_api_contract",
    "enji_guard_cli.auth",
    "enji_guard_cli.auth_impl",
    "enji_guard_cli.audits",
    "enji_guard_cli.core",
    "enji_guard_cli.core_impl",
    "enji_guard_cli.enji_api",
    "enji_guard_cli.enji_api_impl",
    "enji_guard_cli.errors",
    "enji_guard_cli.journey",
    "enji_guard_cli.mcp_facade",
    "enji_guard_cli.readiness",
    "enji_guard_cli.settings",
    "enji_guard_cli.telemetry",
    "enji_guard_cli.telemetry_sink",
    "enji_guard_cli.transport",
]
forbidden_modules = ["typer", "mcp"]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
id = "auth-impl-stays-pure"
name = "Auth implementation details stay below the auth facade"
type = "forbidden"
source_modules = ["enji_guard_cli.auth_impl"]
forbidden_modules = [
    "enji_guard_cli._enji_api_contract",
    "enji_guard_cli.auth",
    "enji_guard_cli.audits",
    "enji_guard_cli.cli",
    "enji_guard_cli.cli_impl",
    "enji_guard_cli.core",
    "enji_guard_cli.core_impl",
    "enji_guard_cli.enji_api",
    "enji_guard_cli.enji_api_impl",
    "enji_guard_cli.errors",
    "enji_guard_cli.json_types",
    "enji_guard_cli.mcp_facade",
    "enji_guard_cli.mcp_server",
    "enji_guard_cli.readiness",
    "enji_guard_cli.runtime",
    "enji_guard_cli.settings",
    "enji_guard_cli.telemetry",
    "enji_guard_cli.transport",
    "httpx",
    "httpx_retries",
    "mcp",
    "typer",
]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
id = "settings-stays-pure"
name = "Settings stay pure and below application code"
type = "forbidden"
source_modules = ["enji_guard_cli.settings"]
forbidden_modules = [
    "enji_guard_cli._enji_api_contract",
    "enji_guard_cli.auth",
    "enji_guard_cli.auth_impl",
    "enji_guard_cli.audits",
    "enji_guard_cli.cli",
    "enji_guard_cli.core",
    "enji_guard_cli.core_impl",
    "enji_guard_cli.enji_api",
    "enji_guard_cli.enji_api_impl",
    "enji_guard_cli.errors",
    "enji_guard_cli.mcp_facade",
    "enji_guard_cli.mcp_server",
    "enji_guard_cli.runtime",
    "enji_guard_cli.telemetry",
    "enji_guard_cli.telemetry_sink",
    "enji_guard_cli.transport",
    "httpx",
    "httpx_retries",
    "mcp",
    "typer",
]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
id = "readiness-stays-runtime-cache"
name = "Readiness state stays a small runtime cache"
type = "forbidden"
source_modules = ["enji_guard_cli.readiness"]
forbidden_modules = [
    "enji_guard_cli._enji_api_contract",
    "enji_guard_cli.auth",
    "enji_guard_cli.auth_impl",
    "enji_guard_cli.audits",
    "enji_guard_cli.cli",
    "enji_guard_cli.cli_impl",
    "enji_guard_cli.core",
    "enji_guard_cli.core_impl",
    "enji_guard_cli.enji_api",
    "enji_guard_cli.enji_api_impl",
    "enji_guard_cli.errors",
    "enji_guard_cli.mcp_facade",
    "enji_guard_cli.mcp_server",
    "enji_guard_cli.runtime",
    "enji_guard_cli.telemetry",
    "enji_guard_cli.telemetry_sink",
    "enji_guard_cli.transport",
    "httpx",
    "httpx_retries",
    "mcp",
    "typer",
]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
id = "json-types-stays-pure"
name = "JSON type aliases stay pure and below application code"
type = "forbidden"
source_modules = ["enji_guard_cli.json_types"]
forbidden_modules = [
    "enji_guard_cli._enji_api_contract",
    "enji_guard_cli.auth",
    "enji_guard_cli.auth_impl",
    "enji_guard_cli.audits",
    "enji_guard_cli.cli",
    "enji_guard_cli.cli_impl",
    "enji_guard_cli.core",
    "enji_guard_cli.core_impl",
    "enji_guard_cli.enji_api",
    "enji_guard_cli.enji_api_impl",
    "enji_guard_cli.errors",
    "enji_guard_cli.mcp_facade",
    "enji_guard_cli.mcp_server",
    "enji_guard_cli.runtime",
    "enji_guard_cli.settings",
    "enji_guard_cli.telemetry",
    "enji_guard_cli.telemetry_sink",
    "enji_guard_cli.transport",
    "httpx",
    "httpx_retries",
    "mcp",
    "typer",
]
allow_indirect_imports = true

[dependency-groups]
dev = [
    "actionlint-py>=1.7.12.24",
    "basedpyright>=1.39.8",
    "deptry>=0.25",
    "import-linter>=2.13",
    "openapi-spec-validator>=0.9.0",
    "pip-audit>=2.10.1",
    "pytest>=9.1.1",
    "pytest-cov>=7",
    "pytest-crap>=0.3.0",
    "pytest-xdist>=3.8.0",
    "radon>=6.0.1",
    "ruff>=0.15.21",
    "vulture>=2.16",
]
