[project]
name = "enji-guard-cli"
dynamic = ["version"]
description = "Command-line tools for Enji Guard."
license = "PolyForm-Noncommercial-1.0.0"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1,<1",
    "mcp[cli]>=1.28.1,<2",
    "tenacity>=9.1.2,<10",
    "typer>=0.26.7",
    "watchfiles>=1.2.0,<2",
]

[project.scripts]
enji-guard = "enji_guard_cli.delivery.cli:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/enji_guard_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-config --strict-markers -W error"
tmp_path_retention_policy = "failed"
tmp_path_retention_count = 1
xfail_strict = true

[tool.ruff]
src = ["src", "scripts", "tests"]
line-length = 120
target-version = "py314"
extend-exclude = [".planning"]

[tool.ruff.lint]
explicit-preview-rules = true
extend-select = ["RUF100"]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "B",
    "BLE",
    "UP",
    "C4",
    "PIE",
    "RET",
    "ISC",
    "RSE",
    "FLY",
    "FURB",
    "RUF",
    "PERF",
    "SIM",
    "PTH",
    "DTZ",
    "PGH",
    "PLE",
    "LOG",
    "G",
    "N818",
    "ARG",
    "S",
    "C90",
    "PLR09",
    "PLR17",
    "PLR2004",
]
ignore = ["ISC001", "S101", "S105"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "DTZ",
    "ARG",
    "PERF401",
    "PLR2004",
    "S",
]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src/enji_guard_cli", "scripts", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "standard"
reportAny = "error"
reportExplicitAny = "error"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
reportMissingParameterType = "error"
reportMissingTypeArgument = "none"
reportUnannotatedClassAttribute = "none"
reportUnusedCallResult = "none"
reportImplicitStringConcatenation = "none"
reportPrivateUsage = "none"

[tool.vulture]
paths = ["src/enji_guard_cli", "scripts", "tests"]
min_confidence = 80
ignore_decorators = [
    "@app.callback",
    "@app.command",
]

[tool.deptry]
known_first_party = ["enji_guard_cli"]
per_rule_ignores = { DEP004 = ["radon"] }

[tool.coverage.run]
source = ["src/enji_guard_cli"]
branch = true
sigterm = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.importlinter]
root_package = "enji_guard_cli"
include_external_packages = true

[[tool.importlinter.contracts]]
id = "bounded-contexts-stay-domain-pure"
name = "Audit and Portfolio do not directly import delivery or infrastructure"
type = "forbidden"
source_modules = ["enji_guard_cli.audit", "enji_guard_cli.portfolio"]
forbidden_modules = [
    "enji_guard_cli.application",
    "enji_guard_cli.delivery",
    "enji_guard_cli.enji_gateway",
    "enji_guard_cli.transport",
    "httpx",
    "mcp",
    "typer",
]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
id = "audit-stays-independent-from-portfolio"
name = "Audit stays independent from Portfolio"
type = "forbidden"
source_modules = ["enji_guard_cli.audit"]
forbidden_modules = ["enji_guard_cli.portfolio"]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
id = "portfolio-enters-audit-through-ports"
name = "Portfolio enters Audit only through its typed ports"
type = "forbidden"
source_modules = ["enji_guard_cli.portfolio"]
forbidden_modules = ["enji_guard_cli.audit"]
ignore_imports = [
    "enji_guard_cli.portfolio.ports -> enji_guard_cli.audit.ports",
]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
id = "application-avoids-wire-and-frameworks"
name = "Application does not directly import wire or delivery dependencies"
type = "forbidden"
source_modules = ["enji_guard_cli.application"]
forbidden_modules = [
    "enji_guard_cli.delivery",
    "enji_guard_cli.enji_gateway.client",
    "enji_guard_cli.enji_gateway.contract",
    "enji_guard_cli.enji_gateway.http",
    "enji_guard_cli.enji_gateway.wire",
    "enji_guard_cli.transport",
    "httpx",
    "mcp",
    "typer",
]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
id = "delivery-avoids-gateway-internals"
name = "Delivery does not directly import gateway internals"
type = "forbidden"
source_modules = ["enji_guard_cli.delivery"]
forbidden_modules = [
    "enji_guard_cli.enji_gateway.client",
    "enji_guard_cli.enji_gateway.contract",
    "enji_guard_cli.enji_gateway.http",
    "enji_guard_cli.enji_gateway.wire",
    "enji_guard_cli.transport",
    "httpx",
]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
id = "gateway-stays-below-application"
name = "Enji gateway stays independent from application and delivery"
type = "forbidden"
source_modules = ["enji_guard_cli.enji_gateway"]
forbidden_modules = ["enji_guard_cli.application", "enji_guard_cli.delivery", "mcp", "typer"]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
id = "cli-uses-application-context-boundary"
name = "CLI directly uses Application instead of context internals"
type = "forbidden"
source_modules = ["enji_guard_cli.delivery.cli.app"]
forbidden_modules = ["enji_guard_cli.audit", "enji_guard_cli.portfolio"]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
id = "mcp-uses-narrow-query-facade"
name = "MCP directly uses only its narrow query facade"
type = "forbidden"
source_modules = ["enji_guard_cli.delivery.mcp.server"]
forbidden_modules = [
    "enji_guard_cli.application",
    "enji_guard_cli.audit",
    "enji_guard_cli.portfolio",
    "enji_guard_cli.auth_session",
    "enji_guard_cli.enji_gateway",
    "enji_guard_cli.transport",
]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
id = "gateway-owns-wire-implementation"
name = "Enji gateway exclusively owns its HTTP contract and wire implementation"
type = "protected"
protected_modules = [
    "enji_guard_cli.enji_gateway.client",
    "enji_guard_cli.enji_gateway.contract",
    "enji_guard_cli.enji_gateway.http",
    "enji_guard_cli.enji_gateway.wire",
]
allowed_importers = ["enji_guard_cli.enji_gateway"]

[[tool.importlinter.contracts]]
id = "auth-and-gateway-own-transport"
name = "Only Auth Session and Enji gateway may directly use transport"
type = "protected"
protected_modules = ["enji_guard_cli.transport", "httpx"]
allowed_importers = [
    "enji_guard_cli.auth_session",
    "enji_guard_cli.enji_gateway",
    "enji_guard_cli.transport",
]

[[tool.importlinter.contracts]]
id = "auth-session-stays-credential-focused"
name = "Auth Session does not depend on runtime, product, delivery, or gateway implementations"
type = "forbidden"
source_modules = ["enji_guard_cli.auth_session"]
forbidden_modules = [
    "enji_guard_cli.audit",
    "enji_guard_cli.portfolio",
    "enji_guard_cli.runtime_observability",
    "enji_guard_cli.application",
    "enji_guard_cli.delivery",
    "enji_guard_cli.enji_gateway.wire",
    "enji_guard_cli.enji_gateway.http",
    "enji_guard_cli.enji_gateway.contract",
    "enji_guard_cli.enji_gateway.client",
]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
id = "runtime-observability-stays-operational"
name = "Runtime Observability avoids domain and raw gateway implementations"
type = "forbidden"
source_modules = ["enji_guard_cli.runtime_observability"]
forbidden_modules = [
    "enji_guard_cli.audit",
    "enji_guard_cli.portfolio",
    "enji_guard_cli.application",
    "enji_guard_cli.enji_gateway",
    "enji_guard_cli.delivery",
    "mcp",
]

[[tool.importlinter.contracts]]
id = "fanout-owns-concurrency"
name = "Only orchestration layers may use the shared fanout policy"
type = "protected"
protected_modules = ["enji_guard_cli.fanout"]
allowed_importers = [
    "enji_guard_cli.application",
    "enji_guard_cli.audit",
    "enji_guard_cli.composition",
    "enji_guard_cli.portfolio",
]

[dependency-groups]
dev = [
    "actionlint-py>=1.7.12.24",
    "basedpyright>=1.39.8",
    "deptry>=0.25",
    "import-linter>=2.13",
    "openapi-spec-validator>=0.9.0",
    "pip-audit>=2.10.1",
    "pytest>=9.1.1",
    "pytest-cov>=7",
    "pytest-crap>=0.3.0",
    "pytest-xdist>=3.8.0",
    "radon>=6.0.1",
    "ruff>=0.15.22",
    "vulture>=2.16",
]
